(chore): update env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_publishable_anon_key
+REDIS_USERNAME=your_redis_username
+REDIS_PASSWORD=your_redis_password
+REDIS_HOST=your_redis_host
+REDIS_PORT=your_redis_port
+MATCHING_SERVICE_PORT=3002
