--- a/services/matching-service/.env.example
+++ b/services/matching-service/.env.example
@@ -1,5 +1,5 @@
-PORT=3002
-NODE_ENV=development
-REDIS_URL=redis://localhost:6379
-MATCHING_TIMEOUT=30000
-LOG_LEVEL=debug
+REDIS_USERNAME=your_redis_username
+REDIS_PASSWORD=your_redis_password
+REDIS_HOST=your_redis_host
+REDIS_PORT=your_redis_port
+MATCHING_SERVICE_PORT=3002
